--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -54,7 +54,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: right
-        uses: WncFht/metrics@master
+        uses: lowlighter/metrics@master
         with:
           token: ${{ secrets.METRICS_TOKEN }}
           filename: metrics.right.svg
